@@ -3,9 +3,11 @@
 //
 package io.deephaven.web.shared.data;
 
-import java.io.Serializable;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Iterator;
+import java.util.List;
 import java.util.PrimitiveIterator;
 import java.util.stream.LongStream;
 
@@ -14,7 +16,7 @@ import java.util.stream.LongStream;
  * Iteration protocol, but for now has one method which returns an iterator, and also supports querying the size.
  * Additionally, we may add support for creating RangeSet objects to better serve some use cases.
  */
-public class RangeSet implements Serializable {
+public class RangeSet {
 
     public static RangeSet empty() {
         return new RangeSet();
@@ -37,210 +39,356 @@ public class RangeSet implements Serializable {
         return rangeSet;
     }
 
-    public static RangeSet fromSortedRanges(Range[] sortedRanges) {
-        assert orderedAndNonOverlapping(sortedRanges) : Arrays.toString(sortedRanges);
+    public static RangeSet fromSortedRanges(List<Range> sortedRanges) {
+        assertOrderedAndNonOverlapping(sortedRanges.toArray(new Range[0]));
         RangeSet rangeSet = new RangeSet();
         rangeSet.sortedRanges = sortedRanges;
         return rangeSet;
     }
 
-    private static boolean orderedAndNonOverlapping(Range[] sortedRanges) {
-        long lastSeen = -1;
-        for (int i = 0; i < sortedRanges.length; i++) {
-            if (lastSeen >= sortedRanges[i].getFirst()) {
-                return false;
-            }
-            lastSeen = sortedRanges[i].getLast();
-        }
-        return true;
+    public static RangeSet fromSortedRanges(Range[] sortedRanges) {
+        assertOrderedAndNonOverlapping(sortedRanges);
+        RangeSet rangeSet = new RangeSet();
+        rangeSet.sortedRanges.addAll(Arrays.asList(sortedRanges));
+        return rangeSet;
     }
 
-    private Range[] sortedRanges = new Range[0];
+    private static void assertOrderedAndNonOverlapping(Range[] sortedRanges) {
+        long lastSeen = -1;
+        for (int i = 0; i < sortedRanges.length; i++) {
+            assert lastSeen < sortedRanges[i].getFirst() || lastSeen == -1
+                    : sortedRanges[i - 1] + " came before " + sortedRanges[i] + " (index=" + i + ")";
+            lastSeen = sortedRanges[i].getLast();
+        }
+    }
+
+    private List<Range> sortedRanges = new ArrayList<>();
+
+    private int firstWrongCacheEntry = 0;
+    private long[] cardinality = new long[0];
+
+    public void addRangeSet(RangeSet rangeSet) {
+        if (isEmpty() && !rangeSet.isEmpty()) {
+            sortedRanges = new ArrayList<>(rangeSet.sortedRanges);
+            poisonCache(0);
+        } else if (!rangeSet.isEmpty()) {
+            RangeAccumulator newRanges = new RangeAccumulator();
+            Iterator<Range> rangeIterator = sortedRanges.iterator();
+            Iterator<Range> addIterator = rangeSet.sortedRanges.iterator();
+
+            Range toCheck = rangeIterator.next();
+            Range toAdd = addIterator.next();
+            while (true) {
+                if (toCheck.getLast() < toAdd.getFirst()) {
+                    newRanges.appendRange(toCheck);
+                    if (!rangeIterator.hasNext()) {
+                        toCheck = null;
+                        break;
+                    }
+                    toCheck = rangeIterator.next();
+                } else if (toCheck.getFirst() > toAdd.getLast()) {
+                    newRanges.appendRange(toAdd);
+
+                    if (!addIterator.hasNext()) {
+                        toAdd = null;
+                        break;
+                    }
+                    toAdd = addIterator.next();
+                } else {
+                    Range overlap = toCheck.overlap(toAdd);
+                    assert overlap != null;
+                    newRanges.appendRange(overlap);
+
+                    if (!rangeIterator.hasNext()) {
+                        toCheck = null;
+                        break;
+                    }
+                    toCheck = rangeIterator.next();
+
+                    if (!addIterator.hasNext()) {
+                        toAdd = null;
+                        break;
+                    }
+                    toAdd = addIterator.next();
+                }
+            }
+
+            // Grab remaining ranges
+            if (toCheck != null) {
+                assert toAdd == null;
+                newRanges.appendRange(toCheck);
+                while (rangeIterator.hasNext()) {
+                    newRanges.appendRange(rangeIterator.next());
+                }
+            } else {
+                assert toAdd != null;
+                newRanges.appendRange(toAdd);
+                while (addIterator.hasNext()) {
+                    newRanges.appendRange(addIterator.next());
+                }
+            }
+
+            this.sortedRanges = newRanges.build();
+            poisonCache(0);
+        }
+    }
 
     public void addRange(Range range) {
-        // if empty, add as the only entry
-        if (sortedRanges.length == 0) {
-            sortedRanges = new Range[] {range};
+        addRangeSet(RangeSet.fromSortedRanges(Collections.singletonList(range)));
+    }
+
+    public void removeRangeSet(RangeSet rangeSet) {
+        if (isEmpty() || rangeSet.isEmpty()) {
             return;
         }
-        // if one other entry, test if before, after, or overlapping
-        if (sortedRanges.length == 1) {
-            Range existing = sortedRanges[0];
-            Range overlap = range.overlap(existing);
-            if (overlap != null) {
-                sortedRanges = new Range[] {overlap};
-            } else if (existing.compareTo(range) < 0) {
-                sortedRanges = new Range[] {existing, range};
+
+        RangeAccumulator newRanges = new RangeAccumulator();
+        RangeIterator rangeIterator = new RangeIterator(sortedRanges);
+        Iterator<Range> removeIterator = rangeSet.sortedRanges.iterator();
+
+        Range toCheck = rangeIterator.next();
+        Range toRemove = removeIterator.next();
+        while (true) {
+            if (toCheck.getLast() < toRemove.getFirst()) {
+                newRanges.appendRange(toCheck);
+                if (!rangeIterator.hasNext()) {
+                    toCheck = null;
+                    break;
+                }
+                toCheck = rangeIterator.next();
+            } else if (toCheck.getFirst() > toRemove.getLast()) {
+                if (!removeIterator.hasNext()) {
+                    break;
+                }
+                toRemove = removeIterator.next();
             } else {
-                assert existing.compareTo(range) > 0;
-                sortedRanges = new Range[] {range, existing};
+                Range[] remaining = toCheck.minus(toRemove);
+                if (remaining.length == 0) {
+                    // entire range removed, advance to the next range to check
+                    if (!rangeIterator.hasNext()) {
+                        toCheck = null;
+                        break;
+                    }
+                    toCheck = rangeIterator.next();
+                } else if (remaining.length == 1) {
+                    Range remainingRange = remaining[0];
+                    if (remainingRange.compareTo(toCheck) > 0) {
+                        // unremoved range still needs to be checked
+                        rangeIterator.advanceInCurrentRangeToKey(remainingRange.getFirst());
+                        toCheck = rangeIterator.next();
+
+                        if (!removeIterator.hasNext()) {
+                            break;
+                        }
+                        toRemove = removeIterator.next();
+                    } else {
+                        // keep the leading, remaining section
+                        newRanges.appendRange(remainingRange);
+
+                        // look at the next range
+                        if (!rangeIterator.hasNext()) {
+                            toCheck = null;
+                            break;
+                        }
+                        toCheck = rangeIterator.next();
+                    }
+                } else {
+                    assert remaining.length == 2;
+                    newRanges.appendRange(remaining[0]);
+
+                    rangeIterator.advanceInCurrentRangeToKey(remaining[1].getFirst());
+                    toCheck = rangeIterator.next();
+
+                    if (!removeIterator.hasNext()) {
+                        break;
+                    }
+                    toRemove = removeIterator.next();
+                }
             }
-            return;
         }
 
-        // if more than one other entry, binarySearch to find before and after entry, and test both for overlapping
-        int index = Arrays.binarySearch(sortedRanges, range);
-        if (index >= 0) {
-
-            // starting with that item, check to see if each following item is part of the existing range
-            // we know that no range before it will need to be considered, since the set should previously
-            // have been broken into non-contiguous ranges
-            Range merged = range;
-            int end = sortedRanges.length - 1;
-            for (int i = index; i < sortedRanges.length; i++) {
-                Range existing = sortedRanges[i];
-                // there is an item with the same start, either new item falls within it, or should replace it
-                Range overlap = existing.overlap(merged);
-
-                if (overlap == null) {
-                    // index before this one is the last item to be replaced
-                    end = i - 1;
-                    break;
-                }
-                if (overlap.equals(existing)) {
-                    // the entire range to be added existed within an existing range, we're done
-                    return;
-                }
-
-                // grow the region used for replacing
-                merged = overlap;
+        // Grab remaining ranges
+        if (toCheck != null) {
+            newRanges.appendRange(toCheck);
+            while (rangeIterator.hasNext()) {
+                newRanges.appendRange(rangeIterator.next());
             }
-            // splice out [index, end] items, replacing with the newly grown overlap object (may be the same
-            // size, and only replacing one item)
-            int newLength = sortedRanges.length - (end - index);
-            Range[] newArray = new Range[newLength];
-            if (index > 0) {
-                System.arraycopy(sortedRanges, 0, newArray, 0, index);
-            }
-            newArray[index] = merged;
-            if (end < sortedRanges.length - 1) {
-                System.arraycopy(sortedRanges, end + 1, newArray, index + 1, sortedRanges.length - 1 - end);
-            }
-            sortedRanges = newArray;
-        } else {
-            int proposedIndex = -(index) - 1;
-            Range merged = range;
-            // test the item before the proposed location (if any), try to merge it
-            if (proposedIndex > 0) {
-                Range before = sortedRanges[proposedIndex - 1];
-                Range overlap = before.overlap(merged);
-                if (overlap != null) {
-                    // replace the range that we are merging, and start the slice here instead
-                    merged = overlap;
-                    proposedIndex--;
-                    // TODO this will make the loop start here, considering this item twice. not ideal, but not a big
-                    // deal either
-                }
-            }
-            // "end" represents the last item that needs to be merged in to the newly added item. if no items are to be
-            // merged in, then end will be proposedIndex-1, meaning nothing gets merged in, and the array will grow
-            // instead of shrinking.
-            // if we never find an item we cannot merge with, the end of the replaced range is the last item of the old
-            // array, which could result in the new array having as little as only 1 item
-            int end = sortedRanges.length - 1;
-            // until we quit finding matches, test subsequent items
-            for (int i = proposedIndex; i < sortedRanges.length; i++) {
-                Range existing = sortedRanges[i];
-                Range overlap = existing.overlap(merged);
-                if (overlap == null) {
-                    // stop at the item before this one
-                    end = i - 1;
-                    break;
-                }
-                merged = overlap;
-            }
-            int newLength = sortedRanges.length - (end - proposedIndex);
-            assert newLength > 0 && newLength <= sortedRanges.length + 1;
-            Range[] newArray = new Range[newLength];
-            if (proposedIndex > 0) {
-                System.arraycopy(sortedRanges, 0, newArray, 0, proposedIndex);
-            }
-            newArray[proposedIndex] = merged;
-            if (end < sortedRanges.length - 1) {
-                System.arraycopy(sortedRanges, end + 1, newArray, proposedIndex + 1, sortedRanges.length - (end + 1));
-            }
-            sortedRanges = newArray;
         }
+
+        this.sortedRanges = newRanges.build();
+        poisonCache(0);
     }
 
     public void removeRange(Range range) {
-        // if empty, nothing to do
-        if (sortedRanges.length == 0) {
+        removeRangeSet(RangeSet.fromSortedRanges(Collections.singletonList(range)));
+    }
+
+    public void clear() {
+        sortedRanges.clear();
+        poisonCache(0);
+    }
+
+    private static class RangeAccumulator {
+        private final List<Range> replacement = new ArrayList<>();
+
+        public void appendRange(Range range) {
+            if (!replacement.isEmpty()) {
+                Range lastSeen = replacement.get(replacement.size() - 1);
+                Range overlap = lastSeen.overlap(range);
+                if (overlap != null) {
+                    replacement.set(replacement.size() - 1, overlap);
+                } else {
+                    replacement.add(range);
+                }
+            } else {
+                replacement.add(range);
+            }
+        }
+
+        public void appendRanges(List<Range> ranges) {
+            appendRange(ranges.get(0));
+            replacement.addAll(ranges.subList(0, ranges.size() - 1));
+        }
+
+        public void appendRanges(List<Range> ranges, long firstItemSubindex) {
+            Range first = ranges.get(0);
+            appendRange(new Range(first.getFirst() + firstItemSubindex, first.getLast()));
+            replacement.addAll(ranges.subList(0, ranges.size() - 1));
+        }
+
+        public List<Range> build() {
+            return replacement;
+        }
+    }
+
+    private static class RangeIterator {
+        private int index = -1;
+        private final List<Range> ranges;
+        private long key = 0;
+
+        private RangeIterator(List<Range> ranges) {
+            this.ranges = ranges;
+        }
+
+        public void advanceInCurrentRangeToKey(long key) {
+            assert key != 0;
+            this.key = key;
+        }
+
+        public boolean hasNext() {
+            return key == -1 || index < ranges.size() - 1;
+        }
+
+        public Range next() {
+            if (key != 0) {
+                Range r = ranges.get(index);
+                assert key > r.getFirst() && key <= r.getLast();
+                r = new Range(key, r.getLast());
+                key = 0;
+
+                return r;
+            }
+            return ranges.get(++index);
+        }
+
+    }
+
+    public void applyShifts(ShiftedRange[] shiftedRanges) {
+        if (shiftedRanges.length == 0 || isEmpty()) {
             return;
         }
-
-        // search the sorted list of ranges and find where the current range starts. two case here when using
-        // binarySearch, either the removed range starts in the same place as an existing range starts, or
-        // it starts before an item (and so we check the item before and the item after)
-        int index = Arrays.binarySearch(sortedRanges, range);
-        if (index < 0) {
-            // adjusted index notes where the item would be if it were added, minus _one more_ to see if
-            // it overlaps the item before it. To compute "the position where the new item belongs", we
-            // would do (-index - 1), so to examine one item prior to that we'll subtract one more. Then,
-            // to confirm that we are inserting in a valid position, take the max of that value and zero.
-            index = Math.max(0, -index - 2);
-        }
-
-        int beforeCount = -1;
-        int toRemove = 0;
-        for (; index < sortedRanges.length; index++) {
-            Range toCheck = sortedRanges[index];
-            if (toCheck.getFirst() > range.getLast()) {
-                break;// done, this is entirely after the range we're removing
-            }
-            if (toCheck.getLast() < range.getFirst()) {
-                continue;// skip, we don't overlap at all yet
-            }
-            Range[] remaining = toCheck.minus(range);
-            assert remaining != null : "Only early ranges are allowed to not match at all";
-
-            if (remaining.length == 2) {
-                // Removed region is entirely within the range we are checking:
-                // Splice in the one extra item and we're done - this entry
-                // both started before and ended after the removed section,
-                // so we don't even "break", we just return
-                assert toCheck.getFirst() < range.getFirst() : "Expected " + range + " to start after " + toCheck;
-                assert toCheck.getLast() > range.getLast() : "Expected " + range + " to end after " + toCheck;
-                assert toRemove == 0 && beforeCount == -1
-                        : "Expected that no previous items in the RangeSet had been removed toRemove=" + toRemove
-                                + ", beforeCount=" + beforeCount;
-
-                Range[] replacement = new Range[sortedRanges.length + 1];
-                if (index > 0) {
-                    System.arraycopy(sortedRanges, 0, replacement, 0, index);
+        RangeAccumulator newRanges = new RangeAccumulator();
+        RangeIterator rangeIterator = new RangeIterator(sortedRanges);
+        Iterator<ShiftedRange> shiftIterator = Arrays.asList(shiftedRanges).iterator();
+        Range toCheck = rangeIterator.next();
+        ShiftedRange shiftedRange = shiftIterator.next();
+        do {
+            if (toCheck.getLast() < shiftedRange.getRange().getFirst()) {
+                // leave this range alone, the range to shift is after it
+                newRanges.appendRange(toCheck);
+                if (!rangeIterator.hasNext()) {
+                    toCheck = null;
+                    break;
                 }
-                replacement[index] = remaining[0];
-                replacement[index + 1] = remaining[1];
-                System.arraycopy(sortedRanges, index + 1, replacement, index + 2, sortedRanges.length - (index + 1));
-
-                sortedRanges = replacement;
-
-                return;
-            }
-            if (remaining.length == 1) {
-                // swap shortened item and move on
-                sortedRanges[index] = remaining[0];
+                toCheck = rangeIterator.next();
+            } else if (toCheck.getFirst() > shiftedRange.getRange().getLast()) {
+                // skip the rest of this shift, the next range is after it
+                if (!shiftIterator.hasNext()) {
+                    break;
+                }
+                shiftedRange = shiftIterator.next();
             } else {
-                assert remaining.length == 0 : "Array contains a surprising number of items: " + remaining.length;
+                Range[] remaining = toCheck.minus(shiftedRange.getRange());
+                if (remaining.length == 0) {
+                    // entire range shifted
+                    newRanges.appendRange(toCheck.shift(shiftedRange.getDelta()));
+                    if (!rangeIterator.hasNext()) {
+                        toCheck = null;
+                        break;
+                    }
+                    toCheck = rangeIterator.next();
+                } else if (remaining.length == 1) {
+                    Range remainingRange = remaining[0];
 
-                // splice out this item as nothing exists here any more and move on
-                if (toRemove == 0) {
-                    beforeCount = index;
+                    Range[] complimentArr = toCheck.minus(remainingRange);
+                    assert complimentArr.length == 1;
+                    Range compliment = complimentArr[0];
+                    if (remainingRange.compareTo(toCheck) > 0) {
+                        // shift the compliment
+                        newRanges.appendRange(compliment.shift(shiftedRange.getDelta()));
+
+                        // rest of the range still needs to be checked
+                        rangeIterator.advanceInCurrentRangeToKey(remainingRange.getFirst());
+                        toCheck = rangeIterator.next();
+
+                        // shift is consumed, move to the next one
+                        if (!shiftIterator.hasNext()) {
+                            break;
+                        }
+                        shiftedRange = shiftIterator.next();
+                    } else {
+                        // keep the remaining section
+                        newRanges.appendRange(remainingRange);
+                        // leftovers after, shift the compliment
+                        newRanges.appendRange(compliment.shift(shiftedRange.getDelta()));
+
+                        // look at the next range
+                        if (!rangeIterator.hasNext()) {
+                            toCheck = null;
+                            break;
+                        }
+                        toCheck = rangeIterator.next();
+                    }
+                } else {
+                    assert remaining.length == 2;
+                    // We matched the entire shift range, plus a prefix and suffix
+                    // First append the before section
+                    newRanges.appendRange(remaining[0]);
+                    // Then the entire shift range
+                    newRanges.appendRange(shiftedRange.getResultRange());
+
+                    // Visit the rest of the range next
+                    rangeIterator.advanceInCurrentRangeToKey(remaining[1].getFirst());
+                    toCheck = rangeIterator.next();
+
+                    if (!shiftIterator.hasNext()) {
+                        break;
+                    }
+                    shiftedRange = shiftIterator.next();
                 }
-                toRemove++;
             }
+        } while (true);
 
+        // Grab remaining ranges
+        if (toCheck != null) {
+            newRanges.appendRange(toCheck);
+            while (rangeIterator.hasNext()) {
+                newRanges.appendRange(rangeIterator.next());
+            }
         }
-        if (toRemove > 0) {
-            Range[] replacement = new Range[sortedRanges.length - toRemove];
-            System.arraycopy(sortedRanges, 0, replacement, 0, beforeCount);
-            System.arraycopy(sortedRanges, beforeCount + toRemove, replacement, beforeCount,
-                    sortedRanges.length - beforeCount - toRemove);
 
-            sortedRanges = replacement;
-        } else {
-            assert beforeCount == -1 : "No items to remove, but beforeCount set?";
-        }
+        sortedRanges = newRanges.build();
+        poisonCache(0);
     }
 
     /**
@@ -249,17 +397,62 @@ public class RangeSet implements Serializable {
      * @return Iterator of {@link Range}
      */
     public Iterator<Range> rangeIterator() {
-        return Arrays.asList(sortedRanges).iterator();
+        return sortedRanges.iterator();
+    }
+
+    public Iterator<Range> reverseRangeIterator() {
+        return new Iterator<>() {
+            int i = sortedRanges.size();
+
+            @Override
+            public boolean hasNext() {
+                return i > 0;
+            }
+
+            @Override
+            public Range next() {
+                return sortedRanges.get(--i);
+            }
+        };
     }
 
     public PrimitiveIterator.OfLong indexIterator() {
-        return Arrays.stream(sortedRanges)
-                .flatMapToLong(range -> LongStream.rangeClosed(range.getFirst(), range.getLast()))
-                .iterator();
+        if (isEmpty()) {
+            return LongStream.empty().iterator();
+        }
+        return new PrimitiveIterator.OfLong() {
+            private int rangeIndex = 0;
+            private Range current = sortedRanges.get(0);
+            private long offsetInRange = 0;
+
+            @Override
+            public long nextLong() {
+                long value = current.getFirst() + offsetInRange;
+                if (++offsetInRange >= current.size()) {
+                    rangeIndex++;
+                    offsetInRange = 0;
+                    if (rangeIndex < rangeCount()) {
+                        current = sortedRanges.get(rangeIndex);
+                    } else {
+                        current = null;
+                    }
+                }
+                return value;
+            }
+
+            @Override
+            public boolean hasNext() {
+                return rangeIndex < rangeCount();
+            }
+        };
     }
 
     public int rangeCount() {
-        return sortedRanges.length;
+        return sortedRanges.size();
+    }
+
+    public boolean isFlat() {
+        return sortedRanges.isEmpty() || sortedRanges.size() == 1 && getFirstRow() == 0;
     }
 
     /**
@@ -270,11 +463,15 @@ public class RangeSet implements Serializable {
      * @return long
      */
     public long size() {
-        return Arrays.stream(sortedRanges).mapToLong(Range::size).sum();
+        if (rangeCount() == 0) {
+            return 0;
+        }
+        ensureCardinalityCache();
+        return cardinality[sortedRanges.size() - 1];
     }
 
     public boolean isEmpty() {
-        return sortedRanges.length == 0;
+        return rangeCount() == 0;
     }
 
     public boolean contains(long value) {
@@ -319,19 +516,83 @@ public class RangeSet implements Serializable {
         return true;
     }
 
+    public boolean includesAnyOf(Range range) {
+        if (isEmpty()) {
+            return false;
+        }
+        // search the sorted list of ranges and find where the current range starts. two case here when using
+        // binarySearch, either the removed range starts in the same place as an existing range starts, or
+        // it starts before an item (and so we check the item before and the item after)
+        int index = Collections.binarySearch(sortedRanges, range);
+        if (index >= 0) {
+            // matching start position
+            return true;
+        }
+        // adjusted index notes where the item would be if it were added, minus _one more_ to see if
+        // it overlaps the item before it. To compute "the position where the new item belongs", we
+        // would do (-index - 1), so to examine one item prior to that we'll subtract one more. Then,
+        // to confirm that we are inserting in a valid position, take the max of that value and zero.
+        index = Math.max(0, -index - 2);
+
+        // Check if there is any overlap with the prev item
+        Range target = sortedRanges.get(index);
+        if (range.getFirst() <= target.getLast() && range.getLast() >= target.getFirst()) {
+            return true;
+        }
+
+        // Check if there is a later item, and if there is an overlap with it
+        index++;
+        if (index >= rangeCount()) {
+            return false;
+        }
+        target = sortedRanges.get(index);
+        return range.getFirst() <= target.getLast() && range.getLast() >= target.getFirst();
+    }
+
+    public long find(long key) {
+        long cnt = 0;
+        Iterator<Range> seenIterator = rangeIterator();
+
+        while (seenIterator.hasNext()) {
+            Range current = seenIterator.next();
+
+            if (key < current.getFirst()) {
+                // can't match at all, starts too early
+                return -cnt - 1;
+            }
+
+            if (key > current.getLast()) {
+                // doesn't start until after the current range, so keep moving forward
+                cnt += current.size();
+                continue;
+            }
+            if (key <= current.getLast()) {
+                // this is a match
+                return cnt + key - current.getFirst();
+            }
+        }
+        return -cnt - 1;
+    }
+
     @Override
     public String toString() {
         return "RangeSet{" +
-                "sortedRanges=" + Arrays.toString(sortedRanges) +
+                "sortedRanges=" + sortedRanges +
                 '}';
     }
 
     public long getFirstRow() {
-        return sortedRanges[0].getFirst();
+        return sortedRanges.get(0).getFirst();
     }
 
     public long getLastRow() {
-        return sortedRanges[sortedRanges.length - 1].getLast();
+        return sortedRanges.get(rangeCount() - 1).getLast();
+    }
+
+    public RangeSet copy() {
+        RangeSet copy = new RangeSet();
+        copy.sortedRanges = new ArrayList<>(sortedRanges);
+        return copy;
     }
 
     @Override
@@ -342,20 +603,206 @@ public class RangeSet implements Serializable {
             return false;
 
         final RangeSet rangeSet = (RangeSet) o;
-        return Arrays.equals(sortedRanges, rangeSet.sortedRanges);
+        return sortedRanges.equals(rangeSet.sortedRanges);
     }
 
     @Override
     public int hashCode() {
-        return Arrays.hashCode(sortedRanges);
+        return sortedRanges.hashCode();
+    }
+
+    /**
+     * Indicates that this item has been changed, and should be recomputed. Stores the earliest offset that should be
+     * recomputed.
+     */
+    private void poisonCache(int rangeIndex) {
+        firstWrongCacheEntry = Math.min(rangeIndex, firstWrongCacheEntry);
+    }
+
+    /**
+     * Ensures that the cardinality cache is correct, by correcting any values after the first wrong entry.
+     */
+    private void ensureCardinalityCache() {
+        if (firstWrongCacheEntry == rangeCount()) {
+            return;
+        }
+        if (cardinality.length < rangeCount()) {
+            long[] replacement = new long[rangeCount()];
+            System.arraycopy(cardinality, 0, replacement, 0, cardinality.length);
+            cardinality = replacement;
+        }
+        assert firstWrongCacheEntry >= 0 : this;
+        long cumulative = firstWrongCacheEntry == 0 ? 0 : cardinality[firstWrongCacheEntry - 1];
+        for (int i = firstWrongCacheEntry; i < rangeCount(); i++) {
+            cumulative += sortedRanges.get(i).size();
+            this.cardinality[i] = cumulative;
+        }
+        firstWrongCacheEntry = rangeCount();
+        assert cardinality.length >= rangeCount() : this;
+    }
+
+    public RangeSet subsetForPositions(RangeSet positions, boolean reversed) {
+        if (reversed) {
+            throw new UnsupportedOperationException("reversed=true");
+        }
+        if (positions.isEmpty() || isEmpty()) {
+            return empty();
+        }
+        ensureCardinalityCache();
+
+        List<Range> ranges = new ArrayList<>();
+
+        Iterator<Range> positionsIter = positions.rangeIterator();
+
+        int from = 0;
+        while (positionsIter.hasNext()) {
+            Range nextPosRange = positionsIter.next();
+            if (nextPosRange.getFirst() > size()) {
+                // Entire range is past the end - since ranges are sorted, we're done
+                break;
+            } else if (nextPosRange.getFirst() == size()) {
+                ranges.add(new Range(getLastRow(), getLastRow()));
+                break;
+            }
+            long rangeToTake = nextPosRange.size();
+
+            int pos = Arrays.binarySearch(cardinality, from, rangeCount(), nextPosRange.getFirst() + 1);
+
+            long first;
+            Range target;
+            long offset;
+            if (pos >= 0) {
+                // Position matches the last item in the current range
+                target = sortedRanges.get(pos);
+                offset = 1;
+            } else {
+                // Position matches an earlier item in
+                pos = -pos - 1;
+                target = sortedRanges.get(pos);
+                long c = cardinality[pos];
+                offset = c - nextPosRange.getFirst();// positive value to offset backwards from the end of target
+            }
+            assert target != null : this + ".subsetForPositions(" + positions + ")";
+            assert offset >= 0 && offset <= target.size() : offset;
+            first = target.getLast() - offset + 1;
+
+            while (rangeToTake > 0) {
+                long count = Math.min(offset, rangeToTake);
+                Range res = new Range(first, first + count - 1);
+                assert count == res.size();
+                ranges.add(res);
+
+                rangeToTake -= count;
+                pos++;
+                if (pos >= rangeCount()) {
+                    break;
+                }
+                target = sortedRanges.get(pos);
+                first = target.getFirst();
+                offset = target.size();
+            }
+
+            from = pos - 1;
+        }
+        RangeSet result = RangeSet.fromSortedRanges(ranges.toArray(new Range[0]));
+        assert result.size() <= positions.size();
+        return result;
+    }
+
+    /**
+     *
+     * @param keys
+     * @return
+     */
+    public RangeSet invert(RangeSet keys) {
+        if (keys.isEmpty()) {
+            return empty();
+        }
+        if (isEmpty()) {
+            throw new IllegalArgumentException("Keys not found: " + keys);
+        }
+        ensureCardinalityCache();
+
+        List<Range> positions = new ArrayList<>();
+
+        int from = 0;
+
+        Iterator<Range> keysIter = keys.rangeIterator();
+        long startPos = -1;
+        long endPos = Long.MIN_VALUE;
+        while (keysIter.hasNext()) {
+            Range nextKeyRange = keysIter.next();
+
+            int index = Collections.binarySearch(sortedRanges.subList(from, sortedRanges.size()), nextKeyRange);
+            if (index < 0) {
+                index = -index - 2;// examine the previous element
+            }
+            index += from;
+            if (index < 0) {
+                throw new IllegalArgumentException("Key " + nextKeyRange.getFirst() + " not found");
+            }
+            Range target = sortedRanges.get(index);
+
+            long newStartPos =
+                    (index == 0 ? 0 : this.cardinality[index - 1]) + (nextKeyRange.getFirst() - target.getFirst());
+            if (newStartPos - 1 == endPos) {
+                // nothing to do, only grow the existing range
+                // endPos = newStartPos + (nextKeyRange.size() - 1);
+            } else {
+                // append the existing range and start a new one
+                if (endPos != Long.MIN_VALUE) {
+                    positions.add(new Range(startPos, endPos));
+                }
+
+                startPos = newStartPos;
+                // endPos = startPos + (nextKeyRange.size() - 1);
+            }
+            endPos = newStartPos + (nextKeyRange.size() - 1);
+
+            from = index;
+        }
+        assert endPos != Long.MIN_VALUE;
+        positions.add(new Range(startPos, endPos));
+
+        RangeSet result = RangeSet.fromSortedRanges(positions.toArray(new Range[0]));
+        assert result.size() == keys.size();
+        return result;
     }
 
 
-    Range[] getSortedRanges() {
-        return sortedRanges;
+    public long get(long key) {
+        if (key == 0) {
+            return getFirstRow();
+        }
+        if (key >= size()) {
+            return -1;
+        }
+        ensureCardinalityCache();
+
+        int pos = Arrays.binarySearch(cardinality, 0, sortedRanges.size(), key);
+
+        if (pos >= 0) {
+            return sortedRanges.get(pos + 1).getFirst();
+        }
+        Range target = sortedRanges.get(-pos - 1);
+        long c = cardinality[-pos - 1];
+        long offset = c - key;// positive value to offset backwards from the end of target
+        assert offset >= 0;
+        return target.getLast() - offset + 1;
     }
 
-    void setSortedRanges(Range[] sortedRanges) {
-        this.sortedRanges = sortedRanges;
+    /**
+     * Removes all keys in the provided rangeset that are present in this.
+     *
+     * @param other the rows to remove
+     * @return any removed keys
+     */
+    public RangeSet extract(RangeSet other) {
+        RangeSet populatedCopy = copy();
+        populatedCopy.removeRangeSet(other);
+        RangeSet removed = copy();
+        removed.removeRangeSet(populatedCopy);
+        removeRangeSet(removed);
+        return removed;
     }
 }
